syntax = "proto3";

import "google/protobuf/timestamp.proto";

package ananke;

option go_package = "ananke/api/proto";

import "core.proto";

message Preorder {
  int32 id = 1;
  string payment_invoice_id = 2;
  TransactionStatus transaction_status = 3;
  string payment_link_url = 4;
  google.protobuf.Timestamp expires_at = 6;
  float amount = 7;
  string currency = 8;
  string description = 9;
  string provider = 10;
  int32 preorder_type_id = 11;
  int32 user_id = 12;
}

message PreorderType {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float amount = 4;
  string currency = 5;
  core.ChannelType channel_type = 6;
  ActiveStatus active_status = 7;
  int32 duration_in_seconds = 8;
}

enum ActiveStatus {
  INACTIVE = 0;
  ACTIVE = 1;
}

enum TransactionStatus {
  TRANSACTION_STATUS_PENDING = 0;
  TRANSACTION_STATUS_COMPLETED = 1;
  TRANSACTION_STATUS_FAILED = 2;
}